force-app/main/default/objects/Item__c/fields/Catogery__c.field-meta.xml
<CustomField>
    <fullName>Catogery__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Clothing</fullName>
            </value>
            <value>
                <fullName>Food And Beverages</fullName>
            </value>
            <value>
                <fullName>Home Appliances</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>