force-app/main/default/objects/Item__c/fields/Price_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Unit__c</fullName>
    <label>Price Per Unit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>