force-app/main/default/objects/Item__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>