force-app/main/default/objects/Item__c/listViews/Inventory.listView-meta.xml
<ListView>
    <fullName>Inventory</fullName>
    <columns>NAME</columns>
    <columns>Catogery__c</columns>
    <columns>Quantity__c</columns>
    <columns>Price_per_Unit__c</columns>
    <columns>Supplier__c</columns>
    <filterScope>Mine</filterScope>
    <label>Inventory</label>
</ListView>